# FlashFund

./: .gitignore  package-lock.json  package.json  users.db
src/: server.ts
src/gl/: Cargo.toml  metadata.json
src/gl/src/: main.rs
src/routes/well-known/: index.ts
src/shared/db/: index.ts
src/shared/lnd/: api.ts
src/views/: home.html  login.html
widget/: package.json  vite.config.ts
widget/scripts/: main.rs
widget/src/: App.vue  styles.css
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/src/: main.rs
widget/src/components/: Greet.vue
