[package]
name = "gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-client = { git = "https://github.com/Blockstream/greenlight.git", branch = "main" }
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
