[package]
name = "flashfund"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"
bip39 = { version = "*", features= ["rand_core"] }
gl-client = { git = "https://github.com/Blockstream/greenlight.git", version = "0.1.9" }
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11"
hex = "0.4.3"
z-base-32 = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
